[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/theme1Button.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Game/VBoxContainerPlayerSel.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Game/TabContainer.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Game/MyKey.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Game/Decrypt1a.gd" type="Script" id=6]
[ext_resource path="res://addons/TextEditEncrypted/TextEditEncrypted.gd" type="Script" id=7]
[ext_resource path="res://assets/images/white10x10.png" type="Texture" id=8]
[ext_resource path="res://addons/TextEditDecrypted/TextEditDecrypted.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Game/Decrypt1.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Game/Decrypt2.gd" type="Script" id=11]
[ext_resource path="res://Scripts/Game/Decrypt3.gd" type="Script" id=12]
[ext_resource path="res://Scripts/Game/Decrypt4.gd" type="Script" id=13]
[ext_resource path="res://Scripts/Game/TheirInfo.gd" type="Script" id=14]
[ext_resource path="res://Scripts/Game/VBoxContainerTabSel.gd" type="Script" id=15]

[sub_resource type="ButtonGroup" id=1]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
light_mask = 0
margin_right = 640.0
margin_bottom = 360.0
focus_mode = 1
theme = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 640.0
margin_bottom = 360.0

[node name="VBoxContainerPlayerSel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_top = 60.0
margin_right = 40.0
margin_bottom = 300.0
rect_min_size = Vector2( 40, 240 )
size_flags_vertical = 4
script = ExtResource( 3 )

[node name="VCForTeam" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainerPlayerSel"]
margin_right = 40.0
margin_bottom = 240.0
size_flags_vertical = 3

[node name="Button" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainerPlayerSel/VCForTeam"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 0
action_mode = 0
group = SubResource( 1 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainerPlayerSel/VCForTeam/Button"]
margin_right = 40.0
margin_bottom = 15.0
align = 1
valign = 1

[node name="TabContainer" type="TabContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 596.0
margin_bottom = 360.0
mouse_filter = 1
size_flags_horizontal = 3
tabs_visible = false
script = ExtResource( 4 )

[node name="PhrasesMine" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/PhrasesMine"]
margin_left = 224.0
margin_right = 320.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 4
size_flags_vertical = 1
text = "My DEcrypted"

[node name="TextEdit" type="TextEdit" parent="MarginContainer/HBoxContainer/TabContainer/PhrasesMine"]
margin_top = 20.0
margin_right = 544.0
margin_bottom = 348.0
mouse_default_cursor_shape = 0
size_flags_vertical = 3
show_line_numbers = true

[node name="PhrasesMineEncrypted" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/PhrasesMineEncrypted"]
margin_left = 224.0
margin_right = 320.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 4
size_flags_vertical = 1
text = "My ENcrypted"

[node name="TextEdit" type="TextEdit" parent="MarginContainer/HBoxContainer/TabContainer/PhrasesMineEncrypted"]
margin_top = 20.0
margin_right = 544.0
margin_bottom = 348.0
size_flags_vertical = 3
show_line_numbers = true

[node name="MyKey" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
hint_tooltip = "Your code is defined here. Reveal a character to the selected player by pressing its box"
script = ExtResource( 5 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/MyKey"]
margin_left = 224.0
margin_top = 20.0
margin_right = 320.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 4
size_flags_vertical = 1
text = "My Key"

[node name="SpaceContainer5" type="Container" parent="MarginContainer/HBoxContainer/TabContainer/MyKey"]
margin_top = 4.0
margin_right = 40.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 10 )

[node name="Cons" type="HBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/MyKey"]
margin_left = -48.0
margin_top = -8.0
margin_right = -8.0
margin_bottom = 32.0

[node name="SpaceContainer3" type="Container" parent="MarginContainer/HBoxContainer/TabContainer/MyKey"]
margin_top = 4.0
margin_right = 40.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 10 )

[node name="Vows" type="HBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/MyKey"]
margin_left = -48.0
margin_top = -8.0
margin_right = -8.0
margin_bottom = 32.0

[node name="SpaceContainer4" type="Container" parent="MarginContainer/HBoxContainer/TabContainer/MyKey"]
margin_top = 4.0
margin_right = 40.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 10 )

[node name="Spcs" type="HBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/MyKey"]
margin_left = -48.0
margin_top = -8.0
margin_right = -8.0
margin_bottom = 32.0

[node name="Disconnect" type="Button" parent="MarginContainer/HBoxContainer/TabContainer/MyKey"]
visible = false
margin_right = 12.0
margin_bottom = 20.0

[node name="Decrypt1a" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 6 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/Decrypt1a"]
margin_right = 40.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 4
size_flags_vertical = 1
text = "ENcrypted - DEcrypted - ENcrypted"

[node name="PhraseEncrypted" type="TextEdit" parent="MarginContainer/HBoxContainer/TabContainer/Decrypt1a"]
margin_right = 544.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 28 )
custom_colors/font_color = Color( 1, 0.5, 0.5, 1 )
syntax_highlighting = true
show_line_numbers = true
script = ExtResource( 7 )
__meta__ = {
"_editor_icon": ExtResource( 8 )
}

[node name="PhraseDecrypted" type="TextEdit" parent="MarginContainer/HBoxContainer/TabContainer/Decrypt1a"]
margin_top = 124.0
margin_right = 544.0
margin_bottom = 244.0
rect_min_size = Vector2( 0, 28 )
custom_colors/font_color = Color( 1, 0.5, 0.5, 1 )
syntax_highlighting = true
show_line_numbers = true
caret_block_mode = true
caret_blink = true
script = ExtResource( 9 )
__meta__ = {
"_editor_icon": ExtResource( 8 )
}

[node name="PhraseEncryptedAll" type="TextEdit" parent="MarginContainer/HBoxContainer/TabContainer/Decrypt1a"]
margin_right = 544.0
margin_bottom = 120.0
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0.5, 0.5, 1 )
syntax_highlighting = true
show_line_numbers = true
script = ExtResource( 7 )
__meta__ = {
"_editor_icon": ExtResource( 8 )
}

[node name="Decrypt1" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 10 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/Decrypt1"]
margin_right = 264.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 4
size_flags_vertical = 1
text = "ENcrypted - DEcrypted - DEcrypted"

[node name="PhraseEncrypted" type="TextEdit" parent="MarginContainer/HBoxContainer/TabContainer/Decrypt1"]
margin_right = 544.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 28 )
custom_colors/font_color = Color( 1, 0.5, 0.5, 1 )
syntax_highlighting = true
show_line_numbers = true
script = ExtResource( 7 )
__meta__ = {
"_editor_icon": ExtResource( 8 )
}

[node name="PhraseDecrypted" type="TextEdit" parent="MarginContainer/HBoxContainer/TabContainer/Decrypt1"]
margin_top = 124.0
margin_right = 544.0
margin_bottom = 244.0
rect_min_size = Vector2( 0, 28 )
custom_colors/font_color = Color( 1, 0.5, 0.5, 1 )
syntax_highlighting = true
show_line_numbers = true
caret_block_mode = true
caret_blink = true
script = ExtResource( 9 )
__meta__ = {
"_editor_icon": ExtResource( 8 )
}

[node name="PhraseDecryptedAll" type="TextEdit" parent="MarginContainer/HBoxContainer/TabContainer/Decrypt1"]
margin_top = 124.0
margin_right = 544.0
margin_bottom = 244.0
rect_min_size = Vector2( 0, 28 )
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0.5, 0.5, 1 )
syntax_highlighting = true
show_line_numbers = true
caret_block_mode = true
caret_blink = true
script = ExtResource( 9 )
__meta__ = {
"_editor_icon": ExtResource( 8 )
}

[node name="Decrypt2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 11 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/Decrypt2"]
margin_right = 264.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 4
size_flags_vertical = 1
text = "ENcrypted"

[node name="PhraseEncrypted" type="TextEdit" parent="MarginContainer/HBoxContainer/TabContainer/Decrypt2"]
margin_right = 544.0
margin_bottom = 120.0
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0.5, 0.5, 1 )
syntax_highlighting = true
show_line_numbers = true
script = ExtResource( 7 )
__meta__ = {
"_editor_icon": ExtResource( 8 )
}

[node name="Decrypt3" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 12 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/Decrypt3"]
margin_right = 264.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 4
size_flags_vertical = 1
text = "DEcrypted"

[node name="PhraseDecrypted" type="TextEdit" parent="MarginContainer/HBoxContainer/TabContainer/Decrypt3"]
margin_right = 732.0
margin_bottom = 348.0
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0.5, 0.5, 1 )
syntax_highlighting = true
show_line_numbers = true
caret_block_mode = true
caret_blink = true
script = ExtResource( 9 )
__meta__ = {
"_editor_icon": ExtResource( 8 )
}

[node name="Decrypt4" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 13 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/Decrypt4"]
margin_right = 264.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 4
size_flags_vertical = 1
text = "ENcrypted - DEcrypted"

[node name="PhraseEncrypted" type="TextEdit" parent="MarginContainer/HBoxContainer/TabContainer/Decrypt4"]
margin_right = 544.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0.5, 0.5, 1 )
syntax_highlighting = true
show_line_numbers = true
script = ExtResource( 7 )
__meta__ = {
"_editor_icon": ExtResource( 8 )
}

[node name="PhraseDecrypted" type="TextEdit" parent="MarginContainer/HBoxContainer/TabContainer/Decrypt4"]
margin_top = 124.0
margin_right = 544.0
margin_bottom = 244.0
rect_min_size = Vector2( 0, 120 )
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0.5, 0.5, 1 )
syntax_highlighting = true
show_line_numbers = true
caret_block_mode = true
caret_blink = true
script = ExtResource( 9 )
__meta__ = {
"_editor_icon": ExtResource( 8 )
}

[node name="TheirInfo" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 14 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/TheirInfo"]
margin_right = 544.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 1
text = "Guess the charactername of the other players"
autowrap = true

[node name="VC" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/TheirInfo"]
margin_top = 24.0
margin_right = 544.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="HC" type="HBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/TheirInfo/VC"]
margin_right = 544.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="TextureButton" parent="MarginContainer/HBoxContainer/TabContainer/TheirInfo/VC/HC"]
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
action_mode = 0
group = SubResource( 1 )
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="TextEdit" type="TextEdit" parent="MarginContainer/HBoxContainer/TabContainer/TheirInfo/VC/HC"]
margin_right = 270.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HC" type="HBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/TheirInfo/VC/HC"]
margin_right = 28.0
margin_bottom = 360.0

[node name="Score" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/TheirInfo/VC/HC/HC"]
margin_left = 274.0
margin_right = 302.0
margin_bottom = 360.0
rect_min_size = Vector2( 28, 0 )
size_flags_vertical = 1

[node name="VBoxContainerTabSel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 600.0
margin_right = 640.0
margin_bottom = 360.0
rect_min_size = Vector2( 40, 40 )
script = ExtResource( 15 )

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainerTabSel"]
margin_right = 40.0
margin_bottom = 360.0
rect_min_size = Vector2( 40, 0 )
focus_mode = 0
size_flags_vertical = 3
toggle_mode = true
enabled_focus_mode = 0

[node name="PausePopup" type="PopupPanel" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="PausePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
[connection signal="tab_changed" from="MarginContainer/HBoxContainer/TabContainer" to="MarginContainer/HBoxContainer/TabContainer" method="_on_TabContainer_tab_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/TabContainer/MyKey/Disconnect" to="." method="_on_Disconnect_pressed"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/TabContainer/Decrypt1a/PhraseEncrypted" to="MarginContainer/HBoxContainer/TabContainer/Decrypt1a" method="_on_PhraseEncrypted_text_changed" flags=3]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/TabContainer/Decrypt1a/PhraseDecrypted" to="MarginContainer/HBoxContainer/TabContainer/Decrypt1a" method="_on_PhraseDecrypted_text_changed"]
[connection signal="cursor_changed" from="MarginContainer/HBoxContainer/TabContainer/Decrypt1a/PhraseEncryptedAll" to="MarginContainer/HBoxContainer/TabContainer/Decrypt1a" method="_on_PhraseEncryptedAll_cursor_changed" flags=3]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/TabContainer/Decrypt1a/PhraseEncryptedAll" to="MarginContainer/HBoxContainer/TabContainer/Decrypt1a" method="_on_PhraseEncryptedAll_text_changed" flags=3]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/TabContainer/Decrypt1/PhraseEncrypted" to="MarginContainer/HBoxContainer/TabContainer/Decrypt1" method="_on_PhraseEncrypted_text_changed" flags=3]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/TabContainer/Decrypt1/PhraseDecrypted" to="MarginContainer/HBoxContainer/TabContainer/Decrypt1" method="_on_PhraseDecrypted_text_changed"]
[connection signal="cursor_changed" from="MarginContainer/HBoxContainer/TabContainer/Decrypt1/PhraseDecryptedAll" to="MarginContainer/HBoxContainer/TabContainer/Decrypt1" method="_on_PhraseDecryptedAll_cursor_changed" flags=3]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/TabContainer/Decrypt1/PhraseDecryptedAll" to="MarginContainer/HBoxContainer/TabContainer/Decrypt1" method="_on_PhraseDecryptedAll_text_changed"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/TabContainer/Decrypt2/PhraseEncrypted" to="MarginContainer/HBoxContainer/TabContainer/Decrypt2" method="_on_PhraseEncrypted_text_changed" flags=3]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/TabContainer/Decrypt3/PhraseDecrypted" to="MarginContainer/HBoxContainer/TabContainer/Decrypt3" method="_on_PhraseDecrypted_text_changed"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/TabContainer/Decrypt4/PhraseEncrypted" to="MarginContainer/HBoxContainer/TabContainer/Decrypt4" method="_on_PhraseEncrypted_text_changed" flags=3]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/TabContainer/Decrypt4/PhraseDecrypted" to="MarginContainer/HBoxContainer/TabContainer/Decrypt4" method="_on_PhraseDecrypted_text_changed"]
[connection signal="pressed" from="PausePopup/Button" to="." method="_on_Button_pressed"]
